--- a/index.html
+++ b/index.html
@@ -6,11 +6,19 @@
 <link rel="stylesheet" href="index.css">
 </head>
 <body>
-    <div class="center">
-      <form>
-      <a href="../index.html">
-        <img src="logo.jpg" style="width:120px">
-      </a>
+  <a href="../index.html">
+    <img src="logo.jpg" style="width:120px">
+  </a>
+  <div class = "center title">
+    <h1>Pencils have erasers.
+  </div>
+  <div class="center words">
+      It sucks fucking up, but you're still here. </br>
+      Try to fix your mistakes.</br>
+      But if it's too late, write yourself a new future. </br>
+      And if it's too much, you can talk to <a href="talk.html">me<a> (a total stranger).</br>
+      Or just sit here and think. </br>
+  </div>
 </body>
 
 </html>
